# queume

./: Cargo.toml  README.md
.github/workflows/: publish.yml  pull_request.yml
src/: lib.rs
src/core/: config.rs  message.rs  queue.rs
src/queues/: fifo.rs  lifo.rs  mod.rs
